...
            <objects>
                <viewController storyboardIdentifier="LoginViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="LoginViewController" customModule="MVVMPractice" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MKz-AE-vex">
                                <rect key="frame" x="50" y="282" width="293" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="yLM-pe-y57"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MVVM" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Gt-ST-JSj">
                                <rect key="frame" x="20" y="133" width="353" height="29"/>
                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="24"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5j0-5N-mC6">
                                <rect key="frame" x="50" y="472" width="293" height="50"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="vlY-hA-hCB"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Login">
                                    <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="21"/>
                                    <color key="baseBackgroundColor" systemColor="systemMintColor"/>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="handleLoginButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YwA-6f-nO0"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KaP-PB-0Pe">
                                <rect key="frame" x="50" y="352" width="293" height="40"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="jDi-0v-nlh"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kk5-az-elX">
                                                    <rect key="frame" x="8" y="233" width="377" height="50"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="50" id="dqn-hE-EXb"/>
                                                    </constraints>
                                                    <state key="normal" title="Button"/>
                                                    <buttonConfiguration key="configuration" style="filled" title="See Details">
                                                        <color key="baseBackgroundColor" systemColor="systemOrangeColor"/>
                                                    </buttonConfiguration>
                                                    <connections>
                                                        <action selector="handleButtonClicked:" destination="tc5-ZY-ohO" eventType="touchUpInside" id="aBJ-za-Eid"/>
                                                    </connections>
                                                </button>
...
